--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "@google/generative-ai": "^0.21.0",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "googleapis": "^144.0.0",
     "openai": "^4.71.1"
   },
   "scripts": {
